# MADII-Project

./: README.md  dump.rdb
.github/workflows/: demo.yml
backend2/: app.py  celerybeat-schedule  dump.rdb  pyproject.toml
backend2/application/: config.py  controllers.py  data_access.py  insert_to_database.py  models.py  security.py
backend2/instance/: project_db.sqlite3
backend2/static/: parking_history_20251130_095846.csv  parking_history_20251130_113349.csv  parking_history_20251130_121455.csv
frontend/: package-lock.json
frontend/src/: App.vue  main.js
frontend/src/components/: Admindashboard.vue  Book.vue  Check_Status.vue  Createlot.vue  Editlot.vue  Home.vue  Login.vue  Navbar.vue  Register.vue  Release.vue  SummaryAdmin.vue  SummaryUser.vue  User.vue  Userdashboard.vue  Userhistory.vue
frontend/src/router/: index.js
