[project]
name = "backend2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.7",
]
